--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "storybook": "build-storybook -c .storybook -o .site",
     "coverage": "jest --coverage",
     "codecov": "jest && codecov",
-    "chromatic": "chromatic test --storybook-addon --script-name start",
+    "chromatic": "chromatic test --exit-zero-on-changes --storybook-addon --script-name start",
     "standard": "standard",
     "test": "jest"
   },
